--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,72 @@ body.modal-open .main-container{
   background-color: #e67e22;
 }
 
+.bootstrap-tagsinput {
+  width: 100%;
+}
+
+.label-info {
+  font-size: 12px;
+  background-color: #e67e22;
+  margin: 1px;
+}
+
+.card {
+    padding-top: 20px;
+    margin: 10px;
+    background-color: rgba(214, 224, 226, 0.2);
+    border-top-width: 0;
+    border-bottom-width: 2px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: rgba(214, 224, 226, 0.2);
+}
+
+.card.hovercard .cardheader {
+    background-color: #e67e22;
+    background-size: cover;
+    height: 70px;
+}
+
+.card.hovercard .avatar {
+    position: relative;
+    top: -50px;
+    margin-bottom: -50px;
+}
+
+.card.hovercard .avatar img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255,255,255,0.5);
+}
+
+.card.hovercard .bottom {
+    padding: 0 20px;
+    margin-bottom: 17px;
+}
+
+.bandcard {
+  margin-right: 5px;
+}
 .result-row {
   min-height: 50px;
 }
