Bandsintown API Integration

--- a/css/index.css
+++ b/css/index.css
@@ -214,7 +214,7 @@ body.modal-open .main-container{
     margin-bottom: 17px;
 }
 
-.bandcard {
+.bandcard-close-button {
   margin-right: 5px;
 }
 
