--- a/css/index.css
+++ b/css/index.css
@@ -259,3 +259,8 @@ border-color: #e67e22;
 .discover-row h4 {
   text-align: left;
 }
+
+.discover-row.row {
+  margin-left: 20px;
+  margin-right: 20px;
+}
