--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,10 @@
 @CHARSET "ISO-8859-1";
+
 body ::selection {
   background: none;
 }
 
-body{
+body {
   font-family: arial, helvetica;
   text-align: center;
   color: #5a5a5a;
@@ -17,35 +18,38 @@ body{
   background-size: cover;
 }
 
-h1{
+h1 {
   font-size: 6em;	
 }
-h1.header{
-  height:120px;
-  vertical-align: middle;
-}
-h2{
+
+h2 {
   font-size: 2em;
 }
-a{
+
+a {
   color: #e67e22;
 }
-.intro{
+
+.intro {
   text-align:center;
 }
-.intro p{
+
+.intro p {
   width: 50%;
   margin: 0 auto;
   font-size: 1.5em;
 }
-.intro p a{
+
+.intro p a {
   width: 50%;
   margin: 0 auto;
   font-size: 1em;
 }
-.text{
+
+.text {
   margin: 80px;
 }
+
 .col-sm-4.col-lg-3 {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -99,6 +103,11 @@ a{
 .modal-login {
   max-height: 70%;
   overflow: auto;
+}
+
+.modal-page-content {
+  height:80%;
+  overflow:auto;
 }
 
 body.modal-open .main-container{
@@ -159,16 +168,12 @@ body.modal-open .main-container{
 }
 
 #col-day-events {
+  max-height: 100%;
   text-align: left;
   overflow: auto;
 }
 
 /* CARDS CSS */
-.modal-cards {
-  height:80%;
-  overflow:auto;
-}
-
 .card {
   padding-top: 20px;
   margin: 10px;
